--- a/styles.css
+++ b/styles.css
@@ -169,8 +169,14 @@ div.osio {
         transition-duration: 0.4s;
     }
     #peliKuvat:hover {
-        width: 300px;
-        height: 300px;
+        width: 250px;
+        height: 250px;
+        cursor: pointer;
+        transition-duration: 0.4s;
+    }
+    #projektiKuvat:hover {
+        width: 250px;
+        height: 250px;
         cursor: pointer;
         transition-duration: 0.4s;
     }
